--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <title>PAGINATION</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <script src="https://app.zenclass.in/sheets/v1/js/zen/suite/bundle.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pagination</title>
+    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+                 
+</head>
+<body>
     <script src="./script.js"></script>
-  </body>
+    <h1>Pagination</h1>
+    <div class="Pagination">
+    <a href="#">&laquo</a>
+    <a href="#" id="Pagination1" onclick="fetchData1()">1</a>
+    <a href="#" id="Pagination2" onclick="fetchData2()">2</a>
+    <a href="#" id="Pagination3" onclick="fetchData3()">3</a>
+    <a href="#" id="Pagination4" onclick="fetchData4()">4</a>
+    <a href="#" id="Pagination5" onclick="fetchData5()">5</a>
+    <a href="#" id="Pagination6" onclick="fetchData6()">6</a>
+    <a href="#" id="Pagination7" onclick="fetchData7()">7</a>
+    <a href="#" id="Pagination8" onclick="fetchData8()">8</a>
+    <a href="#" id="Pagination9" onclick="fetchData9()">9</a>
+    <a href="#" id="Pagination10"onclick="fetchData10()">10</a>
+    <a href="#">&raquo</a>
+
+</div>
+</body>
 </html>
- 
